# scip-semantic

./: .gitignore  Cargo.toml  README.md  tags
crates/scip-macros/src/: lib.rs
crates/scip-treesitter-languages/: Cargo.toml
crates/scip-treesitter-languages/src/: lib.rs
crates/scip-treesitter/src/: lib.rs
queries/go/: scip-locals.scm
scratch/: enum-version.rs  scopes_and_definitions.rs
src/: languages.rs  lib.rs  locals.rs  matches.rs  snapshot.rs  ts_node.rs  ts_scip.rs
src/snapshots/: scip_semantic__locals__test__can_do_functions.snap  scip_semantic__locals__test__can_do_go.snap  scip_semantic__locals__test__can_do_nested_locals.snap  scip_semantic__matches__test__can_parse_go_tree.snap
testdata/: example.go  funcs.go
