[package]
name = "scip-semantic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scip.workspace = true
protobuf.workspace = true

tree-sitter.workspace = true

anyhow.workspace = true
walkdir.workspace = true
pretty_assertions = "1.3.0"

ctags = { path = "crates/ctags" }
scip-treesitter = { path = "crates/scip-treesitter" }
scip-treesitter-languages = { path = "crates/scip-treesitter-languages" }
scip-macros = { path = "crates/scip-macros" }

# TODO: I forget how to move this to only test haha
insta = "1.28.0"
rustc-hash = "1.1.0"

[workspace]
members = [
    "crates/*"
]

[workspace.dependencies]
anyhow = "1.0.69"
tree-sitter = "0.20.9"
walkdir = "2"

# Note, scip and protobuf must be kept in sync
scip = { git = "https://github.com/sourcegraph/scip" }
protobuf = "*"

[profile.release]
lto = true

# This doesn't seem to make a difference
# codegen-units = 1

# Toggle when using flamegraph
debug = 1
