[package]
name = "scip-treesitter-languages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter.workspace = true

tree-sitter-rust = "0.20.3"
tree-sitter-c = "0.20.2"
tree-sitter-go = "0.19.1"
